--- a/configs/od_lepus_defconfig
+++ b/configs/od_lepus_defconfig
@@ -2,6 +2,16 @@ BR2_mipsel=y
 BR2_mips_xburst=y
 # BR2_MIPS_SOFT_FLOAT is not set
 BR2_MIPS_FP32_MODE_32=y
+BR2_TOOLCHAIN_BUILDROOT_VENDOR="lepus"
+BR2_TOOLCHAIN_BUILDROOT_MUSL=y
+BR2_BINUTILS_VERSION_2_38_X=y
+BR2_GCC_VERSION_12_X=y
+BR2_EXTRA_GCC_CONFIG_OPTIONS="--with-mips-plt"
+BR2_TOOLCHAIN_BUILDROOT_CXX=y
+BR2_PACKAGE_HOST_GDB=y
+BR2_PACKAGE_HOST_GDB_PYTHON3=y
+BR2_GDB_VERSION_11=y
+BR2_TARGET_OPTIMIZATION="-pipe"
 BR2_CCACHE=y
 BR2_CCACHE_DIR="$(TOPDIR)/output/ccache/lepus"
 BR2_CCACHE_BR_ONLY=y
@@ -10,16 +20,6 @@ BR2_GLOBAL_PATCH_DIR="$(TOPDIR)/board/opendingux/patches"
 # BR2_PIC_PIE is not set
 BR2_SSP_NONE=y
 BR2_RELRO_NONE=y
-BR2_TOOLCHAIN_BUILDROOT_VENDOR="lepus"
-BR2_TOOLCHAIN_BUILDROOT_MUSL=y
-BR2_BINUTILS_VERSION_2_37_X=y
-BR2_GCC_VERSION_11_X=y
-BR2_EXTRA_GCC_CONFIG_OPTIONS="--with-mips-plt"
-BR2_TOOLCHAIN_BUILDROOT_CXX=y
-BR2_GCC_ENABLE_LTO=y
-BR2_PACKAGE_HOST_GDB=y
-BR2_PACKAGE_HOST_GDB_PYTHON3=y
-BR2_TARGET_OPTIMIZATION="-pipe"
 BR2_ROOTFS_SKELETON_CUSTOM=y
 BR2_ROOTFS_SKELETON_CUSTOM_PATH="board/opendingux/target_skeleton"
 BR2_TARGET_GENERIC_PASSWD_SHA512=y
@@ -86,7 +86,6 @@ BR2_PACKAGE_PYTHON3_SSL=y
 BR2_PACKAGE_PYTHON3_PYEXPAT=y
 BR2_PACKAGE_PYTHON3_ZLIB=y
 BR2_PACKAGE_PYTHON_PYGAME_IMAGE=y
-BR2_PACKAGE_PYTHON_PYGAME_MIXER_MUSIC=y
 # BR2_PACKAGE_ALSA_LIB_ALOAD is not set
 # BR2_PACKAGE_ALSA_LIB_RAWMIDI is not set
 # BR2_PACKAGE_ALSA_LIB_HWDEP is not set
@@ -101,10 +100,8 @@ BR2_PACKAGE_LIBVORBIS=y
 BR2_PACKAGE_OPUS=y
 BR2_PACKAGE_TREMOR=y
 BR2_PACKAGE_LIBZIP=y
-BR2_PACKAGE_LIBRESSL=y
 BR2_PACKAGE_LIBDRM_INSTALL_TESTS=y
 BR2_PACKAGE_BOOST=y
-BR2_PACKAGE_BOOST_ATOMIC=y
 BR2_PACKAGE_BOOST_DATE_TIME=y
 BR2_PACKAGE_BOOST_FILESYSTEM=y
 BR2_PACKAGE_BOOST_PROGRAM_OPTIONS=y
