--- a/board/opendingux/gcw0/uclibc.config
+++ b/board/opendingux/gcw0/uclibc.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# uClibc-ng 1.0.34 C Library Configuration
+# uClibc-ng 1.0.42 C Library Configuration
 #
 # TARGET_aarch64 is not set
 # TARGET_alpha is not set
@@ -16,6 +16,7 @@
 # TARGET_hppa is not set
 # TARGET_i386 is not set
 # TARGET_ia64 is not set
+# TARGET_kvx is not set
 # TARGET_lm32 is not set
 # TARGET_m68k is not set
 # TARGET_metag is not set
@@ -32,6 +33,8 @@ TARGET_mips=y
 # TARGET_tile is not set
 # TARGET_x86_64 is not set
 # TARGET_xtensa is not set
+TARGET_LDSO_NAME="ld-uClibc"
+TARGET_ARCH_BITS=32
 
 #
 # Target Architecture Features and Options
@@ -61,7 +64,6 @@ UCLIBC_HAS_FPU=y
 DO_C99_MATH=y
 # DO_XSI_MATH is not set
 UCLIBC_HAS_LONG_DOUBLE_MATH=y
-KERNEL_HEADERS="/home/paul/dev/gcw0/buildroot/output/build/linux-headers-5.3.8/usr/include"
 HAVE_DOT_CONFIG=y
 
 #
@@ -85,7 +87,6 @@ LDSO_SAFE_RUNPATH=y
 LDSO_SEARCH_INTERP_PATH=y
 LDSO_LD_LIBRARY_PATH=y
 UCLIBC_CTOR_DTOR=y
-# LDSO_GNU_HASH_SUPPORT is not set
 # HAS_NO_THREADS is not set
 # UCLIBC_HAS_LINUXTHREADS is not set
 UCLIBC_HAS_THREADS_NATIVE=y
@@ -102,7 +103,7 @@ UCLIBC_HAS_UTMPX=y
 UCLIBC_HAS_UTMP=y
 # UCLIBC_SUSV2_LEGACY is not set
 UCLIBC_SUSV3_LEGACY=y
-# UCLIBC_HAS_CONTEXT_FUNCS is not set
+UCLIBC_HAS_CONTEXT_FUNCS=y
 # UCLIBC_SUSV3_LEGACY_MACROS is not set
 UCLIBC_SUSV4_LEGACY=y
 # UCLIBC_STRICT_HEADERS is not set
@@ -136,6 +137,7 @@ UCLIBC_HAS_GNU_ERROR=y
 UCLIBC_BSD_SPECIFIC=y
 UCLIBC_HAS_BSD_ERR=y
 # UCLIBC_HAS_OBSOLETE_BSD_SIGNAL is not set
+# UCLIBC_HAS_BSD_B64_NTOP_B64_PTON is not set
 # UCLIBC_HAS_OBSOLETE_SYSV_SIGNAL is not set
 # UCLIBC_NTP_LEGACY is not set
 # UCLIBC_SV4_DEPRECATED is not set
@@ -158,6 +160,10 @@ UCLIBC_SUPPORT_AI_ADDRCONFIG=y
 UCLIBC_HAS_COMPAT_RES_STATE=y
 # UCLIBC_HAS_EXTRA_COMPAT_RES_STATE is not set
 UCLIBC_HAS_RESOLVER_SUPPORT=y
+# UCLIBC_DNSRAND_MODE_URANDOM is not set
+# UCLIBC_DNSRAND_MODE_CLOCK is not set
+UCLIBC_DNSRAND_MODE_PRNGPLUS=y
+# UCLIBC_DNSRAND_MODE_SIMPLECOUNTER is not set
 
 #
 # String and Stdio Support
@@ -236,7 +242,6 @@ UCLIBC_BUILD_NOEXECSTACK=y
 #
 # Development/debugging options
 #
-CROSS_COMPILER_PREFIX="/opt/gcw0-toolchain/usr/bin/mipsel-gcw0-linux-uclibc-"
 UCLIBC_EXTRA_CFLAGS=""
 # DODEBUG is not set
 DOSTRIP=y
