od: Add FLAC v1.3 for binary backwards compat
ScummVM 2.6.1 gcw0 release is linked against libFLAC.so.8.
FLAC 1.4 so version is 12.

Signed-off-by: Gleb Mazovetskiy <glex.spb@gmail.com>

--- a/board/opendingux/Config.in
+++ b/board/opendingux/Config.in
@@ -1,6 +1,7 @@
 menu "OpenDingux packages"
 
 	source "$BR2_EXTERNAL_OPENDINGUX_PATH/package/bennugd/Config.in"
+	source "$BR2_EXTERNAL_OPENDINGUX_PATH/package/flac13/Config.in"
 	source "$BR2_EXTERNAL_OPENDINGUX_PATH/package/fonts-droid/Config.in"
 	source "$BR2_EXTERNAL_OPENDINGUX_PATH/package/gcwconnect/Config.in"
 	source "$BR2_EXTERNAL_OPENDINGUX_PATH/package/gl4es/Config.in"
