--- a/configs/od_gcw0_defconfig
+++ b/configs/od_gcw0_defconfig
@@ -202,6 +202,7 @@ BR2_TARGET_ROOTFS_SQUASHFS4_ZSTD=y
 # BR2_TARGET_ROOTFS_TAR is not set
 BR2_PACKAGE_HOST_MKPASSWD=y
 BR2_PACKAGE_BENNUGD=y
+BR2_PACKAGE_FLAC13=y
 BR2_PACKAGE_GCWCONNECT=y
 BR2_PACKAGE_GL4ES=y
 BR2_PACKAGE_GMENU2X=y
