--- a/configs/od_lepus_defconfig
+++ b/configs/od_lepus_defconfig
@@ -42,7 +42,7 @@ BR2_LINUX_KERNEL_IMAGE_TARGET_CUSTOM=y
 BR2_LINUX_KERNEL_ZSTD=y
 BR2_LINUX_KERNEL_IMAGE_TARGET_NAME="uzImage.bin"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
-BR2_LINUX_KERNEL_INTREE_DTS_NAME="ingenic/gopher2 ingenic/gopher2b ingenic/ldkv ingenic/ldkh ingenic/papk3s ingenic/rg300 ingenic/rs97"
+BR2_LINUX_KERNEL_INTREE_DTS_NAME="ingenic/gopher2 ingenic/gopher2b ingenic/ldkv ingenic/ldkh ingenic/papk3plus ingenic/papk3s ingenic/rg300 ingenic/rs07 ingenic/rs97"
 BR2_LINUX_KERNEL_NEEDS_HOST_OPENSSL=y
 BR2_LINUX_KERNEL_NEEDS_HOST_LIBELF=y
 BR2_PACKAGE_LINUX_TOOLS_GPIO=y
