--- a/configs/od_gcw0_defconfig
+++ b/configs/od_gcw0_defconfig
@@ -160,6 +160,7 @@ BR2_PACKAGE_DHCPDUMP=y
 BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS=y
 # BR2_PACKAGE_DROPBEAR_SMALL is not set
+BR2_PACKAGE_GESFTPSERVER=y
 BR2_PACKAGE_HOSTAPD=y
 BR2_PACKAGE_HOSTAPD_EAP=y
 BR2_PACKAGE_HOSTAPD_WPS=y
@@ -170,7 +171,6 @@ BR2_PACKAGE_NTP_NTPDATE=y
 BR2_PACKAGE_NTP_NTPDC=y
 BR2_PACKAGE_NTP_NTPQ=y
 BR2_PACKAGE_NTP_TICKADJ=y
-BR2_PACKAGE_OPENSSH=y
 BR2_PACKAGE_RSYNC=y
 BR2_PACKAGE_TCPDUMP=y
 BR2_PACKAGE_WGET=y
