--- a/configs/od_lepus_defconfig
+++ b/configs/od_lepus_defconfig
@@ -113,6 +113,7 @@ BR2_PACKAGE_DROPBEAR=y
 # BR2_PACKAGE_DROPBEAR_CLIENT is not set
 BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS=y
 # BR2_PACKAGE_DROPBEAR_SMALL is not set
+BR2_PACKAGE_GESFTPSERVER=y
 BR2_PACKAGE_XINETD=y
 BR2_PACKAGE_DIALOG=y
 BR2_PACKAGE_FILE=y
