--- a/configs/od_rs90_defconfig
+++ b/configs/od_rs90_defconfig
@@ -112,6 +112,7 @@ BR2_PACKAGE_NCURSES_ADDITIONAL_TERMINFO="s/st-256color"
 BR2_PACKAGE_DROPBEAR=y
 # BR2_PACKAGE_DROPBEAR_CLIENT is not set
 BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS=y
+BR2_PACKAGE_GESFTPSERVER=y
 BR2_PACKAGE_XINETD=y
 BR2_PACKAGE_DIALOG=y
 BR2_PACKAGE_FILE=y
