od: use -fipa-pta
Improves performance of emulators (e.g. gambatte on rs90) at the cost of
slightly increased build times.

Per GCC documentation:

> Perform interprocedural pointer analysis and interprocedural modification and reference analysis.
> This option can cause excessive memory and compile-time usage on large compilation units.
> It is not enabled by default at any optimization level.

Signed-off-by: Gleb Mazovetskiy <glex.spb@gmail.com>

--- a/configs/od_lepus_defconfig
+++ b/configs/od_lepus_defconfig
@@ -11,7 +11,7 @@ BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_PACKAGE_HOST_GDB=y
 BR2_PACKAGE_HOST_GDB_PYTHON3=y
 BR2_GDB_VERSION_11=y
-BR2_TARGET_OPTIMIZATION="-pipe"
+BR2_TARGET_OPTIMIZATION="-pipe -fipa-pta"
 BR2_CCACHE=y
 BR2_CCACHE_DIR="$(TOPDIR)/output/ccache/lepus"
 BR2_CCACHE_BR_ONLY=y
