--- a/configs/od_rs90_defconfig
+++ b/configs/od_rs90_defconfig
@@ -7,7 +7,7 @@ BR2_EXTRA_GCC_CONFIG_OPTIONS="--with-mips-plt"
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_PACKAGE_HOST_GDB=y
 BR2_GDB_VERSION_11=y
-BR2_TARGET_OPTIMIZATION="-pipe"
+BR2_TARGET_OPTIMIZATION="-pipe -fipa-pta"
 BR2_CCACHE=y
 BR2_CCACHE_DIR="$(TOPDIR)/output/ccache/rs90"
 BR2_CCACHE_BR_ONLY=y
