--- a/configs/od_gcw0_defconfig
+++ b/configs/od_gcw0_defconfig
@@ -10,7 +10,7 @@ BR2_GCC_VERSION_12_X=y
 BR2_EXTRA_GCC_CONFIG_OPTIONS="--with-mips-plt"
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
 BR2_PACKAGE_HOST_GDB=y
-BR2_TARGET_OPTIMIZATION="-pipe"
+BR2_TARGET_OPTIMIZATION="-pipe -fipa-pta"
 BR2_CCACHE=y
 BR2_CCACHE_DIR="$(TOPDIR)/output/ccache/gcw0"
 BR2_CCACHE_BR_ONLY=y
