od: gcw0: Enable rtl8xxxu module, disable it6610 module
Enable the rtl8xxxu module which supports a variety of Realtek WiFi
chips.

Disable the it6610 module which doesn't exist anymore in the jz-6.2
kernel and has been superseded by the it66121 module.

Signed-off-by: Paul Cercueil <paul@crapouillou.net>

--- a/board/opendingux/gcw0/linux_defconfig
+++ b/board/opendingux/gcw0/linux_defconfig
@@ -57,6 +57,7 @@ CONFIG_MT7601U=m
 # CONFIG_WLAN_VENDOR_RALINK is not set
 CONFIG_RTL8192CU=m
 # CONFIG_RTLWIFI_DEBUG is not set
+CONFIG_RTL8XXXU=m
 # CONFIG_WLAN_VENDOR_RSI is not set
 # CONFIG_WLAN_VENDOR_ST is not set
 # CONFIG_WLAN_VENDOR_TI is not set
@@ -141,7 +142,6 @@ CONFIG_DRM_PANEL_NEWVISION_NV3052C=y
 CONFIG_DRM_PANEL_NOVATEK_NT39016=y
 CONFIG_DRM_PANEL_ORISETECH_OTA5601A=y
 CONFIG_DRM_DISPLAY_CONNECTOR=y
-CONFIG_DRM_ITE_IT6610=y
 CONFIG_DRM_ITE_IT66121=y
 CONFIG_DRM_INGENIC=y
 CONFIG_DRM_INGENIC_IPU=y
