--- a/configs/od_gcw0_defconfig
+++ b/configs/od_gcw0_defconfig
@@ -227,3 +227,4 @@ BR2_PACKAGE_SPARROW3D=y
 BR2_PACKAGE_UBIBOOT=y
 BR2_PACKAGE_UBIBOOT_BOARDNAME="gcw0"
 BR2_PACKAGE_UNLOCKVT=y
+BR2_PACKAGE_HAVEGED=y
