--- a/board/opendingux/gcw0/linux_defconfig
+++ b/board/opendingux/gcw0/linux_defconfig
@@ -243,3 +243,4 @@ CONFIG_FONT_6x10=y
 # CONFIG_DEBUG_MISC is not set
 CONFIG_DEBUG_FS=y
 # CONFIG_SCHED_DEBUG is not set
+CONFIG_RANDOM_TRUST_CPU=y
