rs90: kernel: disable stack zero init
This feature introduced in kernel 5.2 and activated only with
supported toolchain: GCC12+ in our case.

The patch reduces memory usage by the kernel code for ~50kB
including .init section (effective reduction 35-40kB).

Signed-off-by: Siarhei Volkau <lis8215@gmail.com>

--- a/board/opendingux/rs90/linux_defconfig
+++ b/board/opendingux/rs90/linux_defconfig
@@ -180,6 +180,7 @@ CONFIG_NLS_CODEPAGE_437=m
 CONFIG_NLS_ASCII=m
 CONFIG_NLS_ISO8859_1=m
 CONFIG_NLS_UTF8=m
+CONFIG_INIT_STACK_NONE=y
 CONFIG_CRYPTO_LZ4HC=m
 # CONFIG_CRYPTO_HW is not set
 CONFIG_DMA_CMA=y
